...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Car Statistics" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yAR-mt-wAJ">
                                <rect key="frame" x="120.33333333333333" y="80" width="173.66666666666669" height="20.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" identifier="carStats"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="CG8-52-iDv">
                                <rect key="frame" x="345" y="171.33333333333334" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="XaV-eG-Utq"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wih-m0-HOx">
                                <rect key="frame" x="345" y="212.33333333333334" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="tiresSwitch"/>
                                <connections>
                                    <action selector="tiresPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="n3S-Vh-GVZ"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining Funds" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDb-cT-9a2">
                                <rect key="frame" x="20" y="340.33333333333331" width="374" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="remainingFundsLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UQp-o1-YbU">
                                <rect key="frame" x="345" y="253.33333333333337" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="brakesSwitch"/>
                                <connections>
                                    <action selector="brakesPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="126-tn-pIK"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tr0-ZS-h3a">
                                <rect key="frame" x="345" y="294.33333333333331" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="suspensionSwitch"/>
                                <connections>
                                    <action selector="suspensionPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="bdj-c8-bqc"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBI-KS-WyR">
                                <rect key="frame" x="75.333333333333329" y="116.33333333333331" width="59.999999999999986" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="nextCarButton"/>
                                <state key="normal" title="Next Car"/>
                                <connections>
...
